haxe 5, remove tink dependency, use basic haxe syntax for behavior tree definition instead of inline XML

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,10 +6,16 @@
 			"args": "active configuration",
 			"problemMatcher": [],
 			"label": "haxe: active configuration",
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            },
+			"group": {
+				"kind": "build",
+				"isDefault": true
+			},
+			"presentation": {
+				"reveal": "always",
+				"panel": "shared",
+				"showReuseMessage": false,
+				"clear": true
+			}
 		}
 	]
 }
